src/test/ui/associated-consts/issue-93835.stderr
error[E0425]: cannot find value `p` in this scope
  --> $DIR/issue-93835.rs:4:19
   |
LL |     type_ascribe!(p, a<p:p<e=6>>);
   |                   ^ not found in this scope

error[E0412]: cannot find type `a` in this scope
  --> $DIR/issue-93835.rs:4:22
   |
LL |     type_ascribe!(p, a<p:p<e=6>>);
   |                      ^ not found in this scope

error[E0405]: cannot find trait `p` in this scope
  --> $DIR/issue-93835.rs:4:26
   |
LL |     type_ascribe!(p, a<p:p<e=6>>);
   |                          ^ not found in this scope

error[E0658]: associated const equality is incomplete
  --> $DIR/issue-93835.rs:4:28
   |
LL |     type_ascribe!(p, a<p:p<e=6>>);
   |                            ^^^
   |
   = note: see issue #92827 <https://github.com/rust-lang/rust/issues/92827> for more information
   = help: add `#![feature(associated_const_equality)]` to the crate attributes to enable

error[E0658]: associated type bounds are unstable
  --> $DIR/issue-93835.rs:4:24
   |
LL |     type_ascribe!(p, a<p:p<e=6>>);
   |                        ^^^^^^^^
   |
   = note: see issue #52662 <https://github.com/rust-lang/rust/issues/52662> for more information
   = help: add `#![feature(associated_type_bounds)]` to the crate attributes to enable

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0405, E0412, E0425, E0658.
For more information about an error, try `rustc --explain E0405`.
